IOTFirmware/ESP8266_Project/workspace/.metadata/.plugins/org.eclipse.cdt.ui/ioT_grounplay.build.log
08:59:08 **** Incremental Build of configuration Release for project ioT_grounplay ****
"C:\\eclipseArduino\\arduinoPlugin\\tools\\make\\make" all 
Building file: ../.ino.cpp
Starting C++ compile
"C:\eclipseArduino\arduinoPlugin\tools\esp8266\xtensa-lx106-elf-gcc\1.20.0-26-gb404fb9-2/bin/xtensa-lx106-elf-g++" -D__ets__ -DICACHE_FLASH -U__STRICT_ANSI__ "-IC:/eclipseArduino/arduinoPlugin/packages/esp8266/hardware/esp8266/2.2.0/tools/sdk/include" "-IC:/eclipseArduino/arduinoPlugin/packages/esp8266/hardware/esp8266/2.2.0/tools/sdk/lwip/include" -c -Os -g -mlongcalls -mtext-section-literals -fno-exceptions -fno-rtti -falign-functions=4 -std=c++11 -MMD -ffunction-sections -fdata-sections -DF_CPU=80000000L  -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM -DARDUINO=10606 -DARDUINO_ESP8266_ESP01 -DARDUINO_ARCH_ESP8266  -DESP8266   -I"C:\eclipseArduino\arduinoPlugin\packages\esp8266\hardware\esp8266\2.2.0\cores\esp8266" -I"C:\eclipseArduino\arduinoPlugin\packages\esp8266\hardware\esp8266\2.2.0\variants\generic" -I"C:\eclipseArduino\arduinoPlugin\packages\esp8266\hardware\esp8266\2.2.0\libraries\ESP8266WiFi" -I"C:\eclipseArduino\arduinoPlugin\packages\esp8266\hardware\esp8266\2.2.0\libraries\ESP8266WiFi\src" -I"C:\eclipseArduino\arduinoPlugin\packages\esp8266\hardware\esp8266\2.2.0\libraries\EEPROM" -I"C:\eclipseArduino\arduinoPlugin\libraries\MQTT\1.10.0" -I"C:\eclipseArduino\arduinoPlugin\libraries\MQTT\1.10.0\src" -I"C:\eclipseArduino\arduinoPlugin\libraries\CMMC_MQTT_Connector\0.75.0" -I"C:\eclipseArduino\arduinoPlugin\libraries\CMMC_MQTT_Connector\0.75.0\src" -I"C:\eclipseArduino\arduinoPlugin\libraries\ArduinoJson\5.5.0" -I"C:\eclipseArduino\arduinoPlugin\libraries\ArduinoJson\5.5.0\src" -MMD -MP -MF".ino.cpp.d" -MT".ino.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "../.ino.cpp"  -o  ".ino.cpp.o"   -Wall
In file included from ../.ino.cpp:22:0:
../ioT_grounplay.ino:15:1: error: 'MQTT' does not name a type
 MQTT myMqtt("", EIOT_CLOUD_ADDRESS, 1883);
 ^
../ioT_grounplay.ino: In function 'void setup()':
../ioT_grounplay.ino:98:3: error: 'myMqtt' was not declared in this scope
   myMqtt.setClientId((char*) clientName.c_str());
   ^
../ioT_grounplay.ino: In function 'void loop()':
../ioT_grounplay.ino:189:14: error: 'myMqtt' was not declared in this scope
     result = myMqtt.publish(topic, valueStr);
              ^
../ioT_grounplay.ino: In function 'void myConnectedCb()':
../ioT_grounplay.ino:243:3: error: 'myMqtt' was not declared in this scope
   myMqtt.subscribe("/Db/" + instanceId + "/" + String(storage.moduleId) + "/Sensor.Parameter1");
   ^
../ioT_grounplay.ino: In function 'void myDisconnectedCb()':
../ioT_grounplay.ino:251:3: error: 'myMqtt' was not declared in this scope
   myMqtt.connect();
   ^
make: *** [.ino.cpp.o] Error 1
subdir.mk:24: recipe for target '.ino.cpp.o' failed

08:59:09 Build Finished (took 769ms)

